--- a/css/custom-animate.css
+++ b/css/custom-animate.css
@@ -215,6 +215,8 @@
 .services-section-three .pattern-layer-two,
 .service-block-two .inner-box:hover .icon-four,
 .service-block-two .inner-box:hover .icon-three,
+.sec-title:hover .icon-four,
+.sec-title:hover .icon-three,
 .banner-section-two .content-column .pattern-layer-three,
 .banner-section-two .content-column .pattern-layer-four,
 .services-section-four .pattern-layer-two,
